# urc-autonomy-subsystem-2021

./: .gitmodules  CMakeLists.txt  CMakeListsTrimmed.txt  README.md  imu_vis.rviz  package.xml  pose_repub.py
common/: arduino_control.cpp
common/include/: sjsu_robot.h
config/: orthrus_control.yaml
launch/: cameras.launch  cameras_rs.launch  gps.launch  husky_empty_world.launch  left.yaml  occupancy_live.launch  occupancy_live_rviz.launch  occupancy_live_with_gps.launch  orthrus_control.launch  right.yaml  rs_d400_and_t265.launch  rtabmap.launch  startup.bash  t265.launch  tf1.launch
models/chimera/: model.config  model.sdf  model.urdf  model.urdf.old  model.urdf.xacro  multi_imu.sdf  multi_imu_rgbd.sdf
models/chimera_wheel/: model.sdf
scripts/: coupler_angle_calculator.py  set_couplers_forward.py  tf_orthrus_publisher.cpp
sjsu_control/sjsu_control/: hardware_interface.h  sjsu_hardware_interface.h
sjsu_description/: CMakeLists.txt  README.md  package.xml
sjsu_description/launch/: orthrus_control.launch
sjsu_description/models/chimera/: model.sdf  model.urdf  multi_imu.sdf  multi_imu_rgbd.sdf
sjsu_description/scripts/: twist_to_gazebo.py
